--- a/app/Resources/views/ctletapaventa/index.html.twig
+++ b/app/Resources/views/ctletapaventa/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block customcss %}
 	<link rel="stylesheet" href="{{ asset('Resources/customscss/salestage.css') }}">
+	<link rel="stylesheet" href="{{ asset('Resources/slider/css/bootstrap-slider.min.css') }}">
 {% endblock %}
 {% block descripcion %}
 	 <div class="col-md-5">
@@ -13,9 +14,9 @@
 {% block acciones %}
 	 <div class="col-md-7 text-right panel-body">
 		  <button data-loading-text="Loading..." autocomplete="off" class="btnAdd btn btn-sm btn-primary btn-flat">Add</button>
-		  <button class="btnDelete btn btn-sm btn-danger btn-flat">Delete</button>
-		  <button class="btnShow btn btn-sm btn-success btn-flat">Show</button>
-		  <button class="btnAction btn btn-sm btn-default btn-flat">Action</button>
+		  <button class="hidden btnDelete btn btn-sm btn-danger btn-flat">Delete</button>
+		  <button class="hidden btnShow btn btn-sm btn-success btn-flat">Show</button>
+		  <button class="hidden btnAction btn btn-sm btn-default btn-flat">Action</button>
 	 </div>
 {% endblock acciones %}
 
@@ -27,45 +28,110 @@
 
 {% block contenido %}
 	<div class="row">
-		<div class="col-md-12 col-xs-12">
-			<div id="pnAdd" class="panel panel-default" style="display:none;">
-    				<div class="panel-heading">Add</div>
-    				<div class="panel-body">
-    					<div class="col-md-4">
-						<label>Name</label>
-						<input id="txtName" type="text" name="" class="input-sm form-control validateInput">
-					</div>
-					<div class="col-md-4">
-						<label>Probability</label>
-						<input id="txtProbability" type="text" name="" class="input-sm form-control validateInput">
-					</div>
-					<div class="col-md-4">
-						<label>State</label>
-						<input id="txtState" type="" name="" class="input-sm form-control validateInput">
-					</div>
-					<div class="clearfix"></div>
-					<div class="col-md-4 pull-right text-right" style="margin-top:20px;">
-						<button id="btnSave" class="btn btn-sm btn-primary">Save</button>
-						<button id="btnCancel" class="btn btn-sm btn-default">Cancel</button>
-					</div>
-    				</div>
-    				{# <div class="panel-footer">Panel Footer</div> #}
-  			</div>
-		</div>
+		{% include ':ctletapaventa:new.html.twig' %}
+
 		<div class="clearfix"></div>
 		<div class="col-md-12 col-xs-12">
-			<table id="saleStageList" class="mdl-data-table" width="100%" cellspacing="0">
-				  <thead>
+
+			<table id="saleStageList" class="mdl-data-table dataTable" width="100%" cellspacing="0" style="text-align:left;">
+				  {# <thead>
 						<tr>
-							 {# <th>Id</th> #}
+							 <th>Id</th>
 							 <th>Name</th>
 							 <th>Probability</th>
 							 <th>State</th>
 							 <th>Actions</th>
 						</tr>
-				  </thead>
-				  
+				  </thead> #}
+				<thead>
+					<tr role="row">
+						<th style="text-align:left;width: 10px;" colspan="1" rowspan="1"><input class="chkItemAll" type="checkbox" name=""></th>
+						<th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="mdl-data-table__cell--non-numeric sorting">Name</th>
+						<th aria-sort="descending" aria-label="Probability: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="mdl-data-table__cell--non-numeric sorting_desc">Probability</th>
+						<th aria-label="State: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" >State</th>
+						{# <th aria-label="Actions: activate to sort column ascending" style="width: 33px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">Actions</th> #}
+					</tr>
+						
+				</thead>	  
 			 </table>
+
+			 {# <table style="width: 100%;" aria-describedby="example_info" role="grid" id="example" class="mdl-data-table dataTable" width="100%" cellspacing="0">
+					
+					
+					<tbody>
+														
+					<tr class="odd" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Prescott Bartlett</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Technical Author</td>
+							<td class=" mdl-data-table__cell--non-numeric">London</td>
+							<td>27</td>
+							<td>2011/05/07</td>
+							<td>$145,000</td>
+						</tr><tr class="even" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Gavin Cortez</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Team Leader</td>
+							<td class=" mdl-data-table__cell--non-numeric">San Francisco</td>
+							<td>22</td>
+							<td>2008/10/26</td>
+							<td>$235,500</td>
+						</tr><tr class="odd" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Gloria Little</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Systems Administrator</td>
+							<td class=" mdl-data-table__cell--non-numeric">New York</td>
+							<td>59</td>
+							<td>2009/04/10</td>
+							<td>$237,500</td>
+						</tr><tr class="even" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Lael Greer</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Systems Administrator</td>
+							<td class=" mdl-data-table__cell--non-numeric">London</td>
+							<td>21</td>
+							<td>2009/02/27</td>
+							<td>$103,500</td>
+						</tr><tr class="odd" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Tiger Nixon</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">System Architect</td>
+							<td class=" mdl-data-table__cell--non-numeric">Edinburgh</td>
+							<td>61</td>
+							<td>2011/04/25</td>
+							<td>$320,800</td>
+						</tr><tr class="even" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Quinn Flynn</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Support Lead</td>
+							<td class=" mdl-data-table__cell--non-numeric">Edinburgh</td>
+							<td>22</td>
+							<td>2013/03/03</td>
+							<td>$342,000</td>
+						</tr><tr class="odd" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Finn Camacho</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Support Engineer</td>
+							<td class=" mdl-data-table__cell--non-numeric">San Francisco</td>
+							<td>47</td>
+							<td>2009/07/07</td>
+							<td>$87,500</td>
+						</tr><tr class="even" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Olivia Liang</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Support Engineer</td>
+							<td class=" mdl-data-table__cell--non-numeric">Singapore</td>
+							<td>64</td>
+							<td>2011/02/03</td>
+							<td>$234,500</td>
+						</tr><tr class="odd" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Sakura Yamamoto</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Support Engineer</td>
+							<td class=" mdl-data-table__cell--non-numeric">Tokyo</td>
+							<td>37</td>
+							<td>2009/08/19</td>
+							<td>$139,575</td>
+						</tr><tr class="even" role="row">
+							<td class="mdl-data-table__cell--non-numeric">Bradley Greer</td>
+							<td class="mdl-data-table__cell--non-numeric sorting_1">Software Engineer</td>
+							<td class=" mdl-data-table__cell--non-numeric">London</td>
+							<td>41</td>
+							<td>2012/10/13</td>
+							<td>$132,000</td>
+						</tr></tbody>
+				</table> #}
 		</div>
 	</div>
 	 {# <ul>
@@ -78,6 +144,7 @@
 {% block js_extend %}
 	<script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
 	<script type="text/javascript" src="{{ asset('Resources/persist/salestage/salestage.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('Resources/slider/js/bootstrap-slider.min.js') }}"></script>
 		<script type="text/javascript">
 		$(document).ready(function() {
 		  	/////Definición datatable
@@ -90,17 +157,27 @@
 					"type": 'GET'
 				},
 				"columns": [
-					{ "data": "Name" },
-					{ "data": "Probability" },
-					{ "data": "State" },
-					{ "data": "Actions" }
+					{ "data": "chk" },
+					{ "data": "name" },
+					{ "data": "probability" },
+					{ "data": "state" }
+					// { "data": "actions" }
 				],
-				"order":[0,'asc'],
+				"order":[1,'asc'],
 				"columnDefs": [
+					{ "orderable": false, "targets": 0 },
 					{ "orderable": false, "targets": 3 }
 				]
 			});
 			/////Fin definición datatable
+
+			/////Definición slider
+			$('#txtProbability').slider({
+				formatter: function(value) {
+					return 'Current value: ' + value;
+				}
+			});
+			/////Fin definición slider
 		});
 	</script>
 	 
