--- a/app/Resources/views/ctletapaventa/new.html.twig
+++ b/app/Resources/views/ctletapaventa/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
 {% block body %}
     <h1>CtlEtapaVenta creation</h1>
@@ -14,3 +14,33 @@
         </li>
     </ul>
 {% endblock %}
+ #}
+
+
+ <div class="col-md-12 col-xs-12">
+            <div id="pnAdd" class="panel panel-default" style="display:none;">
+                    <div class="panel-heading">Add</div>
+                    <div class="panel-body">
+                        <div class="col-md-4">
+                        <label>Name</label>
+                        <input id="txtId" type="hidden" name="" class="input-sm form-control">
+                        <input id="txtName" type="text" name="" class="input-sm form-control validateInput">
+                    </div>
+                    <div class="col-md-4">
+                        <label>Probability</label>
+                        {# <input id="txtProbability" type="text" name="" class="input-sm form-control validateInput"> #}
+                        <input id="txtProbability" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10"/>
+                    </div>
+                    {# <div class="col-md-4">
+                        <label>State</label>
+                        <input id="txtState" type="" name="" class="input-sm form-control validateInput">
+                    </div> #}
+                    <div class="clearfix"></div>
+                    <div class="col-md-4 pull-right text-right" style="margin-top:20px;">
+                        <button id="btnSave" class="btn btn-sm btn-primary">Save</button>
+                        <button id="btnCancel" class="btn btn-sm btn-default">Cancel</button>
+                    </div>
+                    </div>
+                    {# <div class="panel-footer">Panel Footer</div> #}
+            </div>
+</div>
