Error css inputs

--- a/app/Resources/views/layout/layouterp.html.twig
+++ b/app/Resources/views/layout/layouterp.html.twig
@@ -12,6 +12,7 @@
 	                          	<link rel="stylesheet" href="{{ asset('Resources/datatable/css/material.min.css') }}">
 	                          	<link rel="stylesheet" href="{{ asset('Resources/datatable/css/datatables.material.min.css') }}">
 	                          	<link rel="stylesheet" href="{{ asset('Resources/sweetalert/css/sweetalert2.min.css') }}">
+	                          	<link rel="stylesheet" href="{{ asset('Resources/customscss/errors.css') }}">
 	                          	<link rel="stylesheet" href="{{ asset('Resources/src/css/style.css') }}">
 	                          	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 	                          	{% block customcss %}
