--- a/app/Resources/views/crmtipocampania/index.html.twig
+++ b/app/Resources/views/crmtipocampania/index.html.twig
@@ -30,7 +30,7 @@
 
 {% block contenido %}
     <div class="row">
-        {% include ':ctletapaventa:new.html.twig' %}
+        {% include ':crmtipocampania:new.html.twig' %}
 
         <div class="clearfix"></div>
         <div class="col-md-12 col-xs-12">
@@ -38,10 +38,10 @@
                   
                 <thead>
                     <tr role="row">
-                        <th style="text-align:left;width: 10px;" colspan="1" rowspan="1"><input class="chkItemAll" type="checkbox" name=""></th>
-                        <th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="mdl-data-table__cell--non-numeric sorting">Name</th>
-                        <th aria-sort="descending" aria-label="Probability: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="mdl-data-table__cell--non-numeric sorting_desc">Probability</th>
-                        <th aria-label="State: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" >State</th>
+                        <th style="text-align:left;width: 20px;" colspan="1" rowspan="1"><input class="chkItemAll" type="checkbox" name=""></th>
+                        <th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">Name</th>
+                        {# <th aria-sort="descending" aria-label="Probability: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="mdl-data-table__cell--non-numeric sorting_desc">Probability</th> #}
+                        {# <th aria-label="State: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" >State</th> #}
                         {# <th aria-label="Actions: activate to sort column ascending" style="width: 33px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">Actions</th> #}
                     </tr>
                 </thead>      
@@ -49,26 +49,12 @@
         </div>
     </div>
 {% endblock %}
-{% block contenido %}
-    
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombre</th>
-                <th>Estado</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-    </table>
-
-    
-{% endblock %}
 
 {% block js_extend %}
+    <script type="text/javascript" src="{{ asset('Resources/animations/campaigntypes/campaigntypes.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('Resources/persist/salestage/salestage.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/campaigntypes/campaigntypes.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/slider/js/bootstrap-slider.min.js') }}"></script>
         <script type="text/javascript">
         $(document).ready(function() {
@@ -84,14 +70,14 @@
                 "columns": [
                     { "data": "chk" },
                     { "data": "name" },
-                    { "data": "probability" },
-                    { "data": "state" }
+                    // { "data": "probability" },
+                    // { "data": "state" }
                     // { "data": "actions" }
                 ],
                 "order":[1,'asc'],
                 "columnDefs": [
-                    { "orderable": false, "targets": 0 },
-                    { "orderable": false, "targets": 3 }
+                    { "orderable": false, "targets": 0 }
+                    
                 ]
             });
             /////Fin definición datatable
