Mejoras en CRUD y gestión de nivel de satisfacción

--- a/Resources/src/css/style.css
+++ b/Resources/src/css/style.css
@@ -1,5 +1,5 @@
 /*Font: font-family: 'Roboto', sans-serif;*/
-/*@import url(https://fonts.googleapis.com/css?family=Roboto:400,300);*/
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300);
 
 .robo {
 	font-family: 'Roboto', sans-serif;
