--- a/app/Resources/views/layout/icons.html.twig
+++ b/app/Resources/views/layout/icons.html.twig
@@ -1,62 +1,32 @@
 <div class="container">
 	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-		<a href="">
-                <img src="{{asset('Resources/src/img/icons/1.png')}}" style="width:100%;">
+            <a href="">
+                <img class="userFilter" data-toggle="tooltip" data-original-title="{{accountsTooltip}}" rel="tooltip" src="{{asset('Resources/src/img/icons/')}}{{accountsIcon}}" alt="Photo perfil" style="width: 100%;">
             </a>
   	</div>
   	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/2.png')}}" style="width:100%;">
-              </a>
-  	</div>
-  	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/3.png')}}" style="width:100%;">
-              </a>
-  	</div>
-  	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-		<a href="">
-                <img src="{{asset('Resources/src/img/icons/4.png')}}" style="width:100%;">
+            <a href="">
+                <img class="userFilter" data-toggle="tooltip" data-original-title="{{saleStagesTooltip}}" rel="tooltip" src="{{asset('Resources/src/img/icons/')}}{{saleStagesIcon}}" alt="Photo perfil" style="width: 100%;">
             </a>
-  	</div>
-	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/5.png')}}" style="width:100%;">
-              </a>
-  	</div>
-	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/6.png')}}" style="width:100%;">
-              </a>
-  	</div>
-  	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-		<a href="">
-                <img src="{{asset('Resources/src/img/icons/7.png')}}" style="width:100%;">
+      </div>
+      <div class="col-md-1 col-xs-3" style="margin-top:5px;">
+            <a href="">
+                <img class="userFilter" data-toggle="tooltip" data-original-title="{{activitiesTooltip}}" rel="tooltip" src="{{asset('Resources/src/img/icons/')}}{{activitiesIcon}}" alt="Photo perfil" style="width: 100%;">
             </a>
-  	</div>
-	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/1.png')}}" style="width:100%;">
-              </a>
-  	</div>
-	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/2.png')}}" style="width:100%;">
-              </a>
-  	</div>
-  	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-		<a href="">
-                <img src="{{asset('Resources/src/img/icons/3.png')}}" style="width:100%;">
+      </div>
+      <div class="col-md-1 col-xs-3" style="margin-top:5px;">
+            <a href="">
+                <img class="userFilter" data-toggle="tooltip" data-original-title="{{calendarTooltip}}" rel="tooltip" src="{{asset('Resources/src/img/icons/')}}{{calendarIcon}}" alt="Photo perfil" style="width: 100%;">
             </a>
-  	</div>
-	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/4.png')}}" style="width:100%;">
-              </a>
-  	</div>
-	<div class="col-md-1 col-xs-3" style="margin-top:5px;">
-  		<a href="">
-                  <img src="{{asset('Resources/src/img/icons/5.png')}}" style="width:100%;">
-              </a>
-  	</div>
+      </div>
+      <div class="col-md-1 col-xs-3" style="margin-top:5px;">
+            <a href="">
+                <img class="userFilter" data-toggle="tooltip" data-original-title="{{settingsTooltip}}" rel="tooltip" src="{{asset('Resources/src/img/icons/')}}{{settingsIcon}}" alt="Photo perfil" style="width: 100%;">
+            </a>
+      </div>
+      <div class="col-md-1 col-xs-3" style="margin-top:5px;">
+            <a href="">
+                <img class="userFilter" data-toggle="tooltip" data-original-title="{{reportsTooltip}}" rel="tooltip" src="{{asset('Resources/src/img/icons/')}}{{reportsIcon}}" alt="Photo perfil" style="width: 100%;">
+            </a>
+      </div>
 </div>
