--- a/app/Resources/views/ctletapaventa/index.html.twig
+++ b/app/Resources/views/ctletapaventa/index.html.twig
@@ -1,30 +1,27 @@
 {% extends ':layout:layouterp.html.twig' %}
 
+{% block title -%}<title>{{tituloEtapa}}</title>{% endblock %}
+
 {% block customcss %}
 	<link rel="stylesheet" href="{{ asset('Resources/customscss/salestage.css') }}">
 	<link rel="stylesheet" href="{{ asset('Resources/slider/css/bootstrap-slider.min.css') }}">
 {% endblock %}
 {% block descripcion %}
 	 <div class="col-md-5">
-		  <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">Sales stage list</p>
-		  <p class="robo" style="font-weight: 300; font-size: 14px; ">Add, modify or delete sales stages.</p>
+		  <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoEtapa}}</p>
+		  <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionEtapa}}</p>
 	 </div>
 
 {% endblock %}
 {% block acciones %}
 	 <div class="col-md-7 text-right panel-body">
-		  <button data-loading-text="Loading..." autocomplete="off" class="btnAdd btn btn-sm btn-primary btn-flat">Add</button>
-		  <button class="hidden btnDelete btn btn-sm btn-danger btn-flat">Delete</button>
-		  <button class="hidden btnShow btn btn-sm btn-success btn-flat">Show</button>
-		  <button class="hidden btnAction btn btn-sm btn-default btn-flat">Action</button>
+		  <button data-loading-text="Loading..." autocomplete="off" class="btnAdd btn btn-sm btn-primary btn-flat">{{add}}</button>
+		  <button class="hidden btnDelete btn btn-sm btn-danger btn-flat">{{delete}}</button>
+		  <button class="hidden btnShow btn btn-sm btn-success btn-flat">{{show}}</button>
+		  <button class="hidden btnAction btn btn-sm btn-default btn-flat">{{action}}</button>
 	 </div>
 {% endblock acciones %}
 
-{% block navegacion %}
-	<a href="/sepes/app_dev.php/admin/reporte/pacientes/reporte" class="leftnava"><li class="leftnav left ">Users management<span class="pull-right right"><i class=""></i></span></li></a>
-	<a href="/sepes/app_dev.php/admin/reporte/ingresoemergencia" class="leftnava"><li class="leftnav left active"> management<span class="pull-right right"><i class="fa fa-arrow-right"></i></span></li></a>
-		  
-{% endblock %}
 
 {% block contenido %}
 	<div class="row">
@@ -46,8 +43,8 @@
 				<thead>
 					<tr role="row">
 						<th style="text-align:left;width: 10px;" colspan="1" rowspan="1"><input class="chkItemAll" type="checkbox" name=""></th>
-						<th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">Name</th>
-						<th aria-sort="descending" aria-label="Probability: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting_desc">Probability</th>
+						<th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{nameEtapa}}</th>
+						<th aria-sort="descending" aria-label="Probability: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting_desc">{{probabilityEtapa}}</th>
 						{# <th aria-label="State: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" >State</th> #}
 						{# <th aria-label="Actions: activate to sort column ascending" style="width: 33px;" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sorting">Actions</th> #}
 					</tr>
@@ -96,7 +93,19 @@
 				"columnDefs": [
 					{ "orderable": false, "targets": 0 }
 					// { "orderable": false, "targets": 3 }
-				]
+				],
+		                "language": {
+		                    "info": "{{dtInfo}} _PAGE_ de _PAGES_",
+		                    "infoEmpty": "{{dtInfoEmpty}}",
+		                    "emptyTable": "{{dtEmptyTable}}",
+		                    "paginate": { 
+		                        "next": "{{dtNext}}",
+		                        "previous": "{{dtPrev}}"
+		                    },
+		                    "processing": "{{dtProcessing}}",
+		                    "search": "{{dtSearch}}",
+		                    "lengthMenu": "{{dtLengthMenu}} _MENU_ registros"
+		                }
 			});
 			/////Fin definición datatable
 
