--- a/app/Resources/views/ctlrol/show.html.twig
+++ b/app/Resources/views/ctlrol/show.html.twig
@@ -1,31 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>CrmTipoCampania</h1>
+    <h1>CtlRol</h1>
 
     <table>
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ crmTipoCampanium.id }}</td>
+                <td>{{ ctlRol.id }}</td>
             </tr>
             <tr>
                 <th>Nombre</th>
-                <td>{{ crmTipoCampanium.nombre }}</td>
-            </tr>
-            <tr>
-                <th>Estado</th>
-                <td>{% if crmTipoCampanium.estado %}Yes{% else %}No{% endif %}</td>
+                <td>{{ ctlRol.nombre }}</td>
             </tr>
         </tbody>
     </table>
 
     <ul>
         <li>
-            <a href="{{ path('admin_crmtipocampania_index') }}">Back to the list</a>
+            <a href="{{ path('admin_role_index') }}">Back to the list</a>
         </li>
         <li>
-            <a href="{{ path('admin_crmtipocampania_edit', { 'id': crmTipoCampanium.id }) }}">Edit</a>
+            <a href="{{ path('admin_role_edit', { 'id': ctlRol.id }) }}">Edit</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
