--- a/app/Resources/views/layout/nav.html.twig
+++ b/app/Resources/views/layout/nav.html.twig
@@ -14,7 +14,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand opcion" href="{#{{ path('dashboard') }}#}"><img src="{{ asset('Resources/src/img/brand.png')}}" style="width: 25px;"></a>
+      <a class="navbar-brand opcion" href="{{ path('admin_dashboard') }}"><img src="{{ asset('Resources/src/img/brand.png')}}" style="width: 25px;"></a>
 {#      <a class="navbar-brand " href="{{ path('admin_cita') }}"><img src="{{ asset('Resources/img/dgplusbelle/images/logo01.jpg')}}" style="width: 200px;"></a>#}
 
       {#<a href="#"><i class="fa fa-chevron-right" style="margin-top: 16px;"> </i>
@@ -35,16 +35,16 @@
             </li>
         {% endblock busqueda %}
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <img src="{{ asset('Photos/Empleado/')}}{#{{app.user.persona.empleado[0].foto}}#}" style="width: 25px;"> &nbsp; {#{{app.user.persona.nombres}} {{app.user.persona.apellidos}}#}<span class="caret"></span></a>
-            {# <ul class="dropdown-menu">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="{{ path('admin_usuario_edit2', {'id':app.user.id})}}"><span class="pull-right"><i class="fa fa-key"></i></span>Editar contraseña</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="{{ path('admin_bitacora')}}"><span class="pull-right"><i class="fa fa-book text-muted"></i></span>Mostrar bitacora</a></li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <img src="{{ asset('Photos/Empleado/')}}{#{{app.user.persona.empleado[0].foto}}#}" style="width: 25px;"> &nbsp; {{app.user.persona.nombre}} {{app.user.persona.apellido}} <span class="caret"></span></a>
+             <ul class="dropdown-menu">
+                <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-key"></i></span>Editar contraseña</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-book text-muted"></i></span>Mostrar bitacora</a></li>
                 {% if is_granted('ROLE_ADMIN') %}
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="{{ path('admin_usuario')}}"><span class="pull-right"><i class="glyphicon glyphicon-cog text-muted"></i></span>Ajustes</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="glyphicon glyphicon-cog text-muted"></i></span>Ajustes</a></li>
                 {% endif %}
                 <li role="separator" class="divider"></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="{{path('plusbelle_logout')}}"><span class="pull-right"><i class="fa fa-sign-out text-muted"></i></span> Cerrar sesión</a></li>
-            </ul> #}
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="{{path('erpdg_logout')}}"><span class="pull-right"><i class="fa fa-sign-out text-muted"></i></span> Cerrar sesión</a></li>
+            </ul> 
         </li>
         
       </ul>
